# cs267-project

./: CMakeLists.txt  flake.nix
src/: decimate.cu  dtw.cu  main.cu
